# hasel-engine-controller

./: .gitignore  README.md
Arduino/OpenLoopSwitchingEncoder_V4/: OpenLoopSwitchingEncoder_V4.ino
Arduino/OpenLoopSwitchingEncoder_V4.5/: OpenLoopSwitchingEncoder_V4.5.ino
Arduino/OpenLoopSwitchingEncoder_V4_pio/src/: OpenLoopSwitchingEncoder_V4.cpp
Arduino/OpenLoopSwitchingEncoder_V5.ino/: OpenLoopSwitchingEncoder_V5.ino.ino
ROS2_Packages/joystick_ws/src/ros2_joystick_serial/: CMakeLists.txt  setup.cfg
ROS2_Packages/joystick_ws/src/ros2_joystick_serial/ros2_joystick_serial/: joystick_serial.py
joystick_ws/install/: local_setup.sh  setup.sh
joystick_ws/install/ros2_joystick_serial/lib/ros2_joystick_serial/: joystick_serial
joystick_ws/install/ros2_joystick_serial/share/ament_index/resource_index/package_run_dependencies/: ros2_joystick_serial
joystick_ws/install/ros2_joystick_serial/share/ros2_joystick_serial/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
joystick_ws/install/ros2_joystick_serial/share/ros2_joystick_serial/cmake/: ros2_joystick_serialConfig.cmake
joystick_ws/log/: latest_build  latest_test
joystick_ws/src/ros2_joystick_serial/: setup.py
